@@ -984,26 +984,29 @@ verilog/parser_sv.v:399: ENDMODULE  'endmodule'
 verilog/parser_sv.v:400: MODULE  'module' 'bug778' undef '0'
 verilog/parser_sv.v:401: VAR  'var' 'bar' 'module' '' 'virtual if_bug777' '' ''
 verilog/parser_sv.v:402: ENDMODULE  'endmodule'
-verilog/parser_sv.v:403: MODULE  'module' 'bug810' undef '0'
-verilog/parser_sv.v:404: COMMENT  '/*parameter*/'
-verilog/parser_sv.v:404: VAR  'parameter' 'DW' 'module' '' 'int unsigned' '' '32'
-verilog/parser_sv.v:404: PORT  'DW' 'module' '' 'int unsigned' '' '1'
-verilog/parser_sv.v:405: ENDMODULE  'endmodule'
-verilog/parser_sv.v:406: INTERFACE  'interface' 'test_if'
-verilog/parser_sv.v:406: VAR  'port' 'clk' 'interface' '' '' '' ''
-verilog/parser_sv.v:406: PORT  'clk' 'interface' 'input' '' '' '1'
-verilog/parser_sv.v:407: ENDINTERFACE  'endinterface'
-verilog/parser_sv.v:409: MODULE  'module' 'bug815' undef '0'
-verilog/parser_sv.v:410: VAR  'port' 'bad' 'module' '' 'test_if' '[2]' ''
-verilog/parser_sv.v:410: PORT  'bad' 'module' 'interface' 'test_if' '[2]' '1'
-verilog/parser_sv.v:410: INSTANT  'test_if' 'bad' '[2]'
-verilog/parser_sv.v:410: ENDCELL  ''
-verilog/parser_sv.v:411: ENDMODULE  'endmodule'
-verilog/parser_sv.v:413: MODULE  'module' 'bug868' undef '0'
-verilog/parser_sv.v:413: PORT  'ifmp' 'module' '' '' '' '1'
-verilog/parser_sv.v:414: INSTANT  'if_bug777' 'ifmp' ''
+verilog/parser_sv.v:400: CLASS  'class' 'cls778' ''
+verilog/parser_sv.v:404: VAR  'var' 'bar' 'class' '' 'virtual if_bug777' '' ''
+verilog/parser_sv.v:405: ENDCLASS  'endclass'
+verilog/parser_sv.v:407: MODULE  'module' 'bug810' undef '0'
+verilog/parser_sv.v:408: COMMENT  '/*parameter*/'
+verilog/parser_sv.v:408: VAR  'parameter' 'DW' 'module' '' 'int unsigned' '' '32'
+verilog/parser_sv.v:408: PORT  'DW' 'module' '' 'int unsigned' '' '1'
+verilog/parser_sv.v:409: ENDMODULE  'endmodule'
+verilog/parser_sv.v:410: INTERFACE  'interface' 'test_if'
+verilog/parser_sv.v:410: VAR  'port' 'clk' 'interface' '' '' '' ''
+verilog/parser_sv.v:410: PORT  'clk' 'interface' 'input' '' '' '1'
+verilog/parser_sv.v:411: ENDINTERFACE  'endinterface'
+verilog/parser_sv.v:413: MODULE  'module' 'bug815' undef '0'
+verilog/parser_sv.v:414: VAR  'port' 'bad' 'module' '' 'test_if' '[2]' ''
+verilog/parser_sv.v:414: PORT  'bad' 'module' 'interface' 'test_if' '[2]' '1'
+verilog/parser_sv.v:414: INSTANT  'test_if' 'bad' '[2]'
 verilog/parser_sv.v:414: ENDCELL  ''
 verilog/parser_sv.v:415: ENDMODULE  'endmodule'
+verilog/parser_sv.v:417: MODULE  'module' 'bug868' undef '0'
+verilog/parser_sv.v:417: PORT  'ifmp' 'module' '' '' '' '1'
+verilog/parser_sv.v:418: INSTANT  'if_bug777' 'ifmp' ''
+verilog/parser_sv.v:418: ENDCELL  ''
+verilog/parser_sv.v:419: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
